--- a/test/alert_test/cke.yaml
+++ b/test/alert_test/cke.yaml
@@ -86,6 +86,41 @@ tests:
               summary: CKE performs some operations.
   - interval: 1m
     input_series:
+      - series: cke_operation_phase_timestamp_seconds
+        values: '0 1+0x119'
+    alert_rule_test:
+    - eval_time: 65m
+      alertname: CKEDoesNotPerformAnyOps
+      exp_alerts: []
+    - eval_time: 66m
+      alertname: CKEDoesNotPerformAnyOps
+      exp_alerts:
+        - exp_labels:
+            severity: warning
+          exp_annotations:
+            runbook: TBD
+            summary: CKE does not perform any operations for more than 1 hour.
+  - interval: 1m
+    input_series:
+      - series: cke_reboot_queue_entries
+        values: '0+0x120 1+0x120'
+    alert_rule_test:
+    - eval_time: 90m
+      alertname: CKERebootQueueStuck
+      exp_alerts: []
+    - eval_time: 185m
+      alertname: CKERebootQueueStuck
+      exp_alerts: []
+    - eval_time: 186m
+      alertname: CKERebootQueueStuck
+      exp_alerts:
+        - exp_labels:
+            severity: warning
+          exp_annotations:
+            runbook: TBD
+            summary: CKE reboot queue is stuck for more than 1 hour.
+  - interval: 1m
+    input_series:
       - series: 'cke_sabakan_integration_successful'
         values: '0+0x59 1'
     alert_rule_test:
@@ -108,17 +143,14 @@ tests:
   - interval: 1m
     input_series:
       - series: 'cke_sabakan_integration_timestamp_seconds'
-        values: '0+0x60 1'
+        values: '0 1+0x119'
+      - series: 'cke_operation_phase{phase="reboot-nodes"}'
+        values: '0+0x120'
     alert_rule_test:
-      - eval_time: 61m
+      - eval_time: 65m
         alertname: CKESabakanIntegrationDoesNotPerformAnyOps
         exp_alerts: []
-  - interval: 1m
-    input_series:
-      - series: 'cke_sabakan_integration_timestamp_seconds'
-        values: '0+0x61'
-    alert_rule_test:
-      - eval_time: 61m
+      - eval_time: 66m
         alertname: CKESabakanIntegrationDoesNotPerformAnyOps
         exp_alerts:
           - exp_labels:
@@ -126,3 +158,13 @@ tests:
             exp_annotations:
               runbook: TBD
               summary: The timestamp of CKE-sabakan integration does not change for 1 hour.
+  - interval: 1m
+    input_series:
+      - series: 'cke_sabakan_integration_timestamp_seconds'
+        values: '0 1+0x119'
+      - series: 'cke_operation_phase{phase="reboot-nodes"}'
+        values: '1+0x120'
+    alert_rule_test:
+      - eval_time: 66m
+        alertname: CKESabakanIntegrationDoesNotPerformAnyOps
+        exp_alerts: []
